[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[dependencies]
derive_more = '0.14.0'
exit-future = '0.1'
futures = '0.1'
log = '0.4'
parking_lot = '0.9.0'
tokio = '0.1'
trie-root = '0.15.2'

[dependencies.babe]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.babe-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-babe-primitives'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.joystream-node-runtime]
path = 'substrate-runtime-joystream'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.staking]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-staking'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'

[dependencies.im-online]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-im-online'
rev = 'a2a0eb5398d6223e531455b4c155ef053a4a3a2b'


[package]
authors = ['paul@jsgenesis.com']
build = 'build.rs'
edition = '2018'
name = 'joystream-node'
version = '2.0.0'

[[bin]]
name = 'joystream-node'
path = 'src/main.rs'
